--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
                 </div>
                 <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <p class="p-2">O transtorno do espectro autista (TEA) é um grupo de alterações no desenvolvimento neurológico podendo afetar em algum grau a comunicação, a interação social e/ou o comportamento da criança, causando dificuldade para formar frases, realizar expressões faciais ou para se comportar dentro da "norma social".</p>
                 </div>
             </div>
         </section>
