--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">O transtorno do espectro autista (TEA) é um grupo de alterações no desenvolvimento neurológico podendo afetar em algum grau a comunicação, a interação social e/ou o comportamento da criança, causando dificuldade para formar frases, realizar expressões faciais ou para se comportar dentro da "norma social".</p>
+                    <h2> Transtorno do aspecto autista (TEA)</h2>
+                    <p class="p-2">O transtorno do espectro autista (TEA) é um grupo de alterações no desenvolvimento neurológico podendo afetar em algum grau a comunicação, a interação social e/ou o comportamento da criança, causando dificuldade para formar frases, realizar expressões faciais ou para se comportar dentro da "norma social".
+                        O transtorno do espectro autista (TEA) não é uma doença, mas sim um modo diferente de se expressar e reagir, consigo próprio e com a sociedade. Não tem a tendência de agravar com a idade, no entanto, quanto mais cedo for feito o diagnóstico e iniciado o tratamento individualizado, melhor a qualidade de vida.
+                    </p>
                 </div>
             </div>
         </section>
@@ -69,7 +71,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/01.jpg"
+                        <img src="img/baixados (1).jpg"
                 title="Pessoas tocando zabumba em um show"  alt="Duas pessoas tocando zabumba em uma apresentação musical"  class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
